# collective.transmute

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: qa.yml  test.yml
src/collective/transmute/: API.md  README.md  __init__.py  _types.py  about.py  cli.py
src/collective/transmute/commands/: report.py  sanity.py  settings.py  transmute.py
src/collective/transmute/examples/: README.md
src/collective/transmute/examples/content-type-migration/: custom_processors.py
src/collective/transmute/examples/incremental/: incremental_migration.py
src/collective/transmute/examples/multi-site/: migrate_all.py
src/collective/transmute/examples/workflow-migration/: advanced_workflow_example.py  custom_workflow.py
src/collective/transmute/layout/: __init__.py
src/collective/transmute/pipeline/: __init__.py
src/collective/transmute/settings/: __init__.py  default.toml
src/collective/transmute/steps/: basic_metadata.py  blobs.py  blocks.py  constraints.py  creators.py  data_override.py  default_page.py  ids.py  paths.py  portal_type.py  review_state.py  sanitize.py
src/collective/transmute/steps/portal_type/: __init__.py  collection.py  default.py
src/collective/transmute/tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_content_type_migration.py  test_incremental_migration.py  test_multi_site_migration.py  test_workflow_migration.py
src/collective/transmute/utils/: __init__.py  default_page.py  files.py  item.py  portal_types.py  querystring.py  workflow.py
src/collective/transmute/utils/exportimport/: __init__.py
tests/: conftest.py
tests/_resources/: workflow.json
tests/_resources/default_page/: document.json  folder.json  link.json
tests/settings/: test_settings.py
tests/steps/: conftest.py  test_step_ids.py
tests/utils/: test_utils_default_page.py  test_utils_item.py  test_utils_portal_types.py  test_utils_workflow.py
