[project]
name = "collective.transmute"
description = "Convert data from collective.exportimport to plone.exportimport."
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "Simples Consultoria", email = "contato@simplesconsultoria.com.br" }
]
license = "MIT"
keywords = ["Plone", "Python", "Volto",]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Plone",
  "Framework :: Plone :: 6.1",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "collective-html2blocks",
    "dynaconf>=3.2.7",
    "orjson>=3.10.15",
    "typer>=0.15.1",
]

[project.urls]
Documentation = "https://github.com/collective/collective.transmute#readme"
Issues = "https://github.com/collective/collective.transmute/issues"
Source = "https://github.com/collective/collective.transmute"

[project.scripts]
transmute = "collective.transmute.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/collective/transmute/about.py"

[tool.hatch.build]
strict-naming = false
packages = ["src/collective"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/collective/transmute"]

[dependency-groups]
test = [
    "pytest<8.0.0",
    "ruff>=0.9.5",
    "towncrier>=24.8.0",
    "pytest-cov>=6.0.0",
    "types-aiofiles>=24.1.0.20241221",
    "mypy>=1.15.0",
    "pytest-asyncio>=0.23.8",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
collective-html2blocks = { git = "https://github.com/collective/collective.html2blocks" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["collective.transmute", "tests"]
branch = true
parallel = true

[tool.towncrier]
package = "collective.transmute"
package_dir = "src"
directory = "news/"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
issue_format = "[#{issue}](https://github.com/collective/collective.transmute/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Feature"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfix"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
ignore_missing_imports = true
